# ryczalt

./: .pre-commit-config.yaml  pyproject.toml
ryczalt/: main.py
